    "4. General Options ==> "21. Auto check mail mechanism" setting in
    the configuration tool.  (If you do not update your configuration,
    you will get messages in your logs:  "PHP Notice:  Undefined variable:
    check_mail_mechanism in /path/to/squirrelmail/src/left_main.php on
    line 322...")
  - Added advanced control over the SSL context used when connecting
    to the SMTP and IMAP servers over SSL/TLS (Thanks to Emmanuel
    Dreyfus).  You can take a look at $imapSslOptions and $smtpSslOptions
    in config_local.example.php in SquirrelMail version 1.5.2 for more
    information.

Version 1.4.22 - 12 July 2011
-----------------------------
  - Backported default timezone fix from version 1.5.2; helps mitigate
    timezone errors in environments where a default has not been set
    by the administrator.
  - Fixed system lock-ups caused by a combination of certain rare,
    malformed message headers and buggy versions of PHP mbstring
    (#3053349).
  - Now allow multiple plugins to handle (add links for) a single
    attachment MIME type.
  - Now allow administrators to disable all plugins or enable just
    a select few plugins (overriding the active plugins in the normal
    configuration) by setting $temporary_plugins as an empty array
    (all disabled) or an array with one or more plugin directory names
    in config_local.php.
  - Backport fix for call_user_func_array not supporting NULL as empty
    array in PHP 5.3.3
  - Fixed sqauth_read_password() for plugins on the login_verified hook.
  - Added SMTP SASL PLAIN authentication option to configuration tool
    (core support for such is not new).
  - Gmail doesn't support standard search commands; removed sort buttons.
  - Forced addition of a file suffix to attachments that lack a filename
    (helps forwarded messages avoid spam filters) (thanks to Petr
    Kletecka) (#3139004).
  - Fixed missing security token in listcommands plugin.
  - Added smtp_auth hook (thanks to Emmanuel Dreyfus).