@@ -364,6 +364,7 @@ $check_referrer = ''                    if ( !$check_referrer );
 $browser_rendering_mode = 'quirks'      if ( !$browser_rendering_mode );
 $use_transparent_security_image = 'true' if ( !$use_transparent_security_image );
 $check_mail_mechanism = 'meta'          if ( !$check_mail_mechanism );
+$display_imap_login_error = 'false'     if ( !$display_imap_login_error );
 
 if ( $ARGV[0] eq '--install-plugin' ) {
     print "Activating plugin " . $ARGV[1] . "\n";
@@ -564,6 +565,7 @@ while ( ( $command ne "q" ) && ( $command ne "Q" ) ) {
         print "19. Browser rendering mode       : $WHT$browser_rendering_mode$NRM\n";
         print "20. Security image               : $WHT" . (lc($use_transparent_security_image) eq 'true' ? 'Transparent' : 'Textual') . "$NRM\n";
         print "21. Auto check mail mechanism    : $WHT$check_mail_mechanism$NRM\n";
+        print "22. Display login error from IMAP: $WHT$display_imap_login_error$NRM\n";
         print "\n";
         print "R   Return to Main Menu\n";
     } elsif ( $menu == 5 ) {
@@ -786,6 +788,7 @@ while ( ( $command ne "q" ) && ( $command ne "Q" ) ) {
             elsif ( $command == 19 ) { $browser_rendering_mode   = command319(); }
             elsif ( $command == 20 ) { $use_transparent_security_image = command320(); }
             elsif ( $command == 21 ) { $check_mail_mechanism     = command321(); }
+            elsif ( $command == 22 ) { $display_imap_login_error = command322(); }
         } elsif ( $menu == 5 ) {
             if ( $command == 1 ) { command41(); }
             elsif ( $command == 2 ) { $theme_css = command42(); }
@@ -2645,6 +2648,35 @@ sub command321 {
 
 
 
+# display_imap_login_error (since 1.4.23)
+sub command322 {
+    print "Some IMAP servers return detailed information about why a login is\n";
+    print "being refused (the username or password could be invalid or there\n";
+    print "might be an administrative lock on the account).\n";
+    print "\n";
+    print "Enabling this option will cause SquirrelMail to display login failure\n";
+    print "messages directly from the IMAP server.  When it is disabled, login\n";
+    print "failures are always reported to the user with the traditional \"Unknown\n";
+    print "user or password incorrect.\"\n";
+    print "\n";
+
+    if ( lc($display_imap_login_error) eq 'true' ) {
+        $default_value = "y";
+    } else {
+        $default_value = "n";
+    }
+    print "Display login error messages directly from the IMAP server? (y/n) [$WHT$default_value$NRM]: $WHT";
+    $display_imap_login_error = <STDIN>;
+    if ( ( $display_imap_login_error =~ /^y\n/i ) || ( ( $display_imap_login_error =~ /^\n/ ) && ( $default_value eq "y" ) ) ) {
+        $display_imap_login_error = 'true';
+    } else {
+        $display_imap_login_error = 'false';
+    }
+    return $display_imap_login_error;
+}
+
+
+
 ####################################################################################
 #### THEMES ####
 sub command41 {
@@ -3686,6 +3718,9 @@ sub save_data {
     # boolean
         print CF "\$use_imap_tls = $use_imap_tls;\n";
         print CF "\$use_smtp_tls = $use_smtp_tls;\n";
+
+    # boolean
+        print CF "\$display_imap_login_error = $display_imap_login_error;\n";
 
         print CF "\$session_name = '$session_name';\n";
 
